--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,7 +7,8 @@
 *{
   margin:0;
   padding: 0;
-  border-sizing:border-box
+  border-sizing:border-box;
+  font-family:"Das-Gitter-Mac" !important;
 }
 
 
