--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -32,3 +32,134 @@ html.lenis {
 .lenis.lenis-scrolling iframe {
   pointer-events: none;
 }
+
+canvas{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  /* filter:brightness(0.4); */
+  /* pointer-events: none; */
+  background: transparent !important;
+  z-index: 8;
+}
+
+.dg.ac{
+  z-index: 9 !important;
+}
+
+.nooise{
+  /* position: relative; */
+  background: #B16B6C;;
+  z-index: 1;
+}
+
+body::before {
+  content: "";
+  background: url("/assets/noise.png");
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  /* background: #000; */
+   /* Color for dimming */
+  opacity: .1; /* Adjust the opacity to control the dimness */
+  z-index: 10; /* Place this pseudo-element behind the content */
+}
+
+.logo{
+  filter: invert(1);
+  transform: scale(2.6);
+}
+
+
+.emblem {
+	/* position: absolute; */
+	/* left: 0;
+	right: 0;
+  top: 25vh; */
+	margin: 0 auto;
+	width: 70px;
+	height: 100px;
+	border-radius: 50%;
+  font-weight: bold;
+	animation: spinZ 20s linear infinite;
+	text-align: center;
+}
+	
+.emblem span {
+		position: absolute;
+		display: inline-block;
+		left: 0;
+		right: 0;
+		top: 0;
+		bottom: 0;
+		text-transform: uppercase;
+		font-size: 2vh;
+		transition: all .5s cubic-bezier(0,0,0,1);
+	}
+
+  .wq{
+    align-self: flex-start;
+    padding: 5px;
+    /* position: absolute; */
+    width: 100%;
+    bottom: 0;
+    padding: 10px 30px;
+    /* margin: 20px; */
+  }
+
+
+	@keyframes spinZ {
+		0% {
+			transform: rotateZ(360deg);
+		}
+		100% {
+			transform: rotateZ(0deg);
+		}
+	}
+
+
+  .bg-hero{
+    background-image:linear-gradient(#00000044, #000000c4), url("/assets/bg-hero.gif");
+    background-size: cover;
+    background-position: center center;
+    /* height: 100vh; */
+  }
+
+  canvas{
+    /* filter: blur(10px); */
+  }
+
+  .hero-hero-text .word:hover{
+      /* font-weight: bold;
+      color: transparent;
+      background:linear-gradient(rgb(255, 220, 177), #fff);
+      background-position: center;
+      background-size: cover;
+      -webkit-background-clip: text;
+      background-clip: text; */
+  }
+
+  .hero-hero-text .char{
+    transition: 0.3s;
+  }
+
+  .hero-hero-text .char:hover{
+    transform: scaleY(1.5);
+    filter: blur(20px);
+  }
+
+  .big-cta{
+    box-shadow:  0 0 0 10000px rgba(255, 255, 255, 0);
+    transition: 0.4s;
+  }
+
+  .big-cta:hover{
+    box-shadow:  0 0 0 10000px rgb(251 146 60);
+    background: #000;
+    color: #fff;
+  }
