--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -51,9 +51,16 @@ canvas{
 
 .nooise{
   /* position: relative; */
-  background: #B16B6C;;
+  background: #6b78b1;;
   z-index: 1;
 }
+
+.nooise-gradient{
+  /* position: relative; */
+background-image: linear-gradient(#6b78b1, #ffffff);
+  z-index: 1;
+}
+
 
 body::before {
   content: "";
